--- a/main.html
+++ b/main.html
@@ -65,7 +65,7 @@
           </div>
           <div class="contents3 con1">
             <a href="#">
-              <img src="../img/m-op03.jpg">
+              <img src="./img/m-op03.jpg">
               <div class="overlay">
                 <div class="con2">
                   <p>DFSA 103</p>
@@ -76,7 +76,7 @@
           </div>
           <div class="contents4 con1">
             <a href="#">
-              <img src="../img/m-op04.jpg">
+              <img src="./img/m-op04.jpg">
               <div class="overlay">
                 <div class="con2">
                   <p>DFSA 104</p>
@@ -87,7 +87,7 @@
           </div>
           <div class="contents5 con1">
             <a href="#">
-              <img src="../img/m-op05.jpg">
+              <img src="./img/m-op05.jpg">
               <div class="overlay">
                 <div class="con2">
                   <p>DFSA 105</p>
@@ -111,7 +111,7 @@
 <div class="section4-1" style="margin-right: 15px">
   <div class="section4-2">
     <div class="section4-3">
-    <a href=""> <img src="../img/m-mb01.jpg" alt=""></a>
+    <a href=""> <img src="./img/m-mb01.jpg" alt=""></a>
     </div>
     <p class="busititle">사업분야01</p>
     <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
@@ -121,7 +121,7 @@
 <div class="section4-1" style="margin-right: 15px">
   <div class="section4-2">
     <div class="section4-3">
-    <a href=""> <img src="../img/m-mb02.jpg" alt=""></a></div>
+    <a href=""> <img src="./img/m-mb02.jpg" alt=""></a></div>
     <p class="busititle">사업분야02</p>
     <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
       보다 큰 감동을 드립니다</p>
@@ -130,7 +130,7 @@
 <div class="section4-1" style="margin-right: 15px">
   <div class="section4-2">
     <div class="section4-3">
-    <a href=""> <img src="../img/m-mb03.jpg" alt=""></a></div>
+    <a href=""> <img src="./img/m-mb03.jpg" alt=""></a></div>
     <p class="busititle">사업분야03</p>
     <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
       보다 큰 감동을 드립니다</p>
@@ -139,7 +139,7 @@
 <div class="section4-1">
   <div class="section4-2">
     <div class="section4-3">
-    <a href=""> <img src="../img/m-mb04.jpg" alt=""></a></div>
+    <a href=""> <img src="./img/m-mb04.jpg" alt=""></a></div>
     <p class="busititle">사업분야04</p>
     <p class="busitxt">고객의 필요와 사업 환경에 따라 맞춤형 디자인으로
       보다 큰 감동을 드립니다</p>
@@ -150,7 +150,7 @@
 <!-- 섹션5 -->
 <div id="section5">
   <div id="section5-1">
-  <img src="../img/visual04.jpg" alt="">
+  <img src="./img/visual04.jpg" alt="">
   <h1>정직과 신뢰, 디자인</h1>
   <p>파이브스톤은 오랫동안 쌓은 전문지식과 노하우를 바탕으로 고객과 함께하겠습니다.</p>
   <button type="button" class="btn btn-outline-secondary" id="learn" >Learn more</button>
@@ -176,22 +176,22 @@
   </div>
   <div id="cscenter-3">
   <div id="cs-3">
-    <a href="../customer/customer02.html">
-      <img src="../img/m-os01.png" alt="" style="margin-bottom: 15px;"><br>
+    <a href="./customer/customer02.html">
+      <img src="./img/m-os01.png" alt="" style="margin-bottom: 15px;"><br>
       <h6>묻고 답하기</h6>
       <p>문의사항을 남기시면 친절히 답변드립니다.</p>
     </a>
   </div>
   <div id="cs-4">
     <a href="#">
-      <img src="../img/m-os02.png" alt="" style="margin-bottom: 15px;"><br>
+      <img src="./img/m-os02.png" alt="" style="margin-bottom: 15px;"><br>
       <h6>채용안내</h6>
       <p>당사와 함께할 수 있는 인재를 모집합니다.</p>
     </a>
   </div>
   <div id="cs-5">
     <a href="./company/company03.html">
-      <img src="../img/m-os03.png" alt="" style="margin-bottom: 15px;"><br>
+      <img src="./img/m-os03.png" alt="" style="margin-bottom: 15px;"><br>
       <h6>오시는 길</h6>
       <p>당사의 약도 및 연락처를 보실 수 있습니다.</p>
     </a>
