--- a/main.html
+++ b/main.html
@@ -175,14 +175,14 @@
     </div>
   </div>
   <div id="cscenter-3">
-  <div id="cs-3">
+  <div id="cs-3" style="margin-right: 5px;">
     <a href="./customer/customer02.html">
       <img src="./img/m-os01.png" alt="" style="margin-bottom: 15px;"><br>
       <h6>묻고 답하기</h6>
       <p>문의사항을 남기시면 친절히 답변드립니다.</p>
     </a>
   </div>
-  <div id="cs-4">
+  <div id="cs-4" style="margin-right: 5px;">
     <a href="#">
       <img src="./img/m-os02.png" alt="" style="margin-bottom: 15px;"><br>
       <h6>채용안내</h6>
